--- a/index.html
+++ b/index.html
@@ -11,5 +11,6 @@
 </head>
 <script type="text/javascript" src="phaser.min.js"></script>
 <script type="text/javascript" src="main.js"></script>
+<script type="text/javascript" src="gameOver.js"></script>
 <body></body>
 </html>
